--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@ body {
   /* font-family: "Moon Dance", cursive; */
   margin: 10px 20px;
 }
+/* 
+hedaer section strat */
 h1 {
   width: 600px;
   border-left: #ff5959 2px solid;
@@ -12,6 +14,7 @@ h1 {
 }
 .header {
   display: flex;
+  margin: auto;
 }
 .my_img {
   /* width: 40px;
@@ -33,9 +36,26 @@ span {
 .about_mission {
   padding: 10px;
   width: 40%;
-  margin-right: 300px;
+  margin-right: 200px;
   margin-top: 40px;
 }
 p {
   margin: 25px 10px;
 }
+/* 
+hedaer section end */
+
+/* 
+goals section start */
+.Goals {
+  display: flex;
+}
+.icons {
+}
+h4 {
+}
+
+h2 {
+}
+/* 
+goals section end */
