--- a/style.css
+++ b/style.css
@@ -11,7 +11,8 @@ h1 {
   border-left: #ff5959 2px solid;
   border-image-slice: 1;
   padding-left: 10px;
-  line-height: 35px;
+  line-height: 60px;
+  font-size: 50px;
 }
 .header {
   display: flex;
@@ -55,7 +56,7 @@ goals section start */
   width: 30%;
   height: auto;
 }
-h4 {
+.h2header {
   margin: 25px 10px;
 }
 
@@ -87,3 +88,14 @@ h2 {
 }
 /* 
 goals section end */
+/* 
+develop section starts */
+
+.develop {
+  display: flex;
+}
+h3 {
+  font-size: 30px;
+}
+/* 
+develop section end */
