--- a/style.css
+++ b/style.css
@@ -129,12 +129,27 @@ h3 {
 }
 
 /* global section end */
+/* from section start */
+.form {
+  margin-top: 20px;
+  background-color: #edf5f6;
+  padding: 10px 20px;
+}
+.form-example {
+  margin-bottom: 7px;
+}
+.submit-btn {
+  margin-top: 10px;
+}
+
+/* form section end */
+
 /* Footer section start */
 footer {
   background-color: #0b0d17;
   color: white;
   padding: 15px;
-  margin-top: 60px;
+  margin-top: 10px;
 }
 h5 {
   font-size: 40px;
